validation fixed
